--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
