--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "chat app's backend code",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
