--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "mongoose": "^5.7.3",
     "nodemon": "^1.19.3",
     "socket.io": "^2.2.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "node backend/src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest --watchAll --runInBand"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC"
