--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "nodemon backend/src/index.js",
+    "dev": "nodemon backend/src/index.js"
   },
   "author": "",
   "license": "ISC"
