--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon backend/src/index.js",
+    "start": "node backend/src/index.js",
     "dev": "nodemon backend/src/index.js"
   },
   "author": "",
